--- a/index.html
+++ b/index.html
@@ -42,89 +42,112 @@
                         </li>
                     </ul>
                 </nav>
-               <div class="header__nav--btn-wrap">
-                <button class="header__nav--btn">
-                    Заказать
-                </button>
-               </div> 
-                
+                <div class="header__nav--btn-wrap">
+                    <button class="header__nav--btn">
+                        Заказать
+                    </button>
+                </div>
+
             </header>
-<div class="breadcrumbs">
-    <form action="#" class="breadcrumbs__form">
-        <ul class="breadcrumbs__list">
-            <li class="breadcrumbs__item">
-                <label class="breadcrumbs__label" for="label1">
-                    <input aria-label="хлебные крошки" type="radio" id="label1" name="bread" class="breadcrumbs__btn visually-hidden" checked>
-                    <span class="breadcrumbs__indicator"></span>
-                </label>
-            </li>
-            <li class="breadcrumbs__item">
-                <label class="breadcrumbs__label" for="label2">
-                    <input aria-label="хлебные крошки" type="radio" id="label2" name="bread" class="breadcrumbs__btn visually-hidden">
-                    <span class="breadcrumbs__indicator"></span>
-                </label>
-            </li>
-            <li class="breadcrumbs__item">
-                <label class="breadcrumbs__label" for="label3">
-                    <input aria-label="хлебные крошки" type="radio" id="label3" name="bread" class="breadcrumbs__btn visually-hidden">
-                    <span class="breadcrumbs__indicator"></span>
-                </label>
-            </li>
-            <li class="breadcrumbs__item">
-                <label class="breadcrumbs__label" for="label4">
-                    <input aria-label="хлебные крошки" type="radio" id="label4" name="bread" class="breadcrumbs__btn visually-hidden">
-                    <span class="breadcrumbs__indicator"></span>
-                </label>
-            </li>
-            <li class="breadcrumbs__item">
-                <label class="breadcrumbs__label" for="label5">
-                    <input aria-label="хлебные крошки" type="radio" id="label5" name="bread" class="breadcrumbs__btn visually-hidden">
-                    <span class="breadcrumbs__indicator"></span>
-                </label>
-            </li>
-            <li class="breadcrumbs__item">
-                <label class="breadcrumbs__label" for="label6">
-                    <input aria-label="хлебные крошки" type="radio" id="label6" name="bread" class="breadcrumbs__btn visually-hidden">
-                    <span class="breadcrumbs__indicator"></span>
-                </label>
-            </li>
-            <li class="breadcrumbs__item">
-                <label class="breadcrumbs__label" for="label7">
-                    <input aria-label="хлебные крошки" type="radio" id="label7" name="bread" class="breadcrumbs__btn visually-hidden">
-                    <span class="breadcrumbs__indicator"></span>
-                </label>
-            </li>
-            <li class="breadcrumbs__item">
-                <label class="breadcrumbs__label" for="label8">
-                    <input aria-label="хлебные крошки" type="radio" id="label8" name="bread" class="breadcrumbs__btn visually-hidden">
-                    <span class="breadcrumbs__indicator"></span>
-                </label>
-            </li>
-            <li class="breadcrumbs__item">
-                <label class="breadcrumbs__label" for="label9">
-                    <input aria-label="хлебные крошки" type="radio" id="label9" name="bread" class="breadcrumbs__btn visually-hidden">
-                    <span class="breadcrumbs__indicator"></span>
-                </label>
-            </li>
-        </ul>
-    </form>
+            <div class="breadcrumbs">
+                <form action="#" class="breadcrumbs__form">
+                    <ul class="breadcrumbs__list">
+                        <li class="breadcrumbs__item">
+                            <label class="breadcrumbs__label" for="label1">
+                                <input aria-label="хлебные крошки" type="radio" id="label1" name="bread" class="breadcrumbs__btn visually-hidden" checked>
+                                <span class="breadcrumbs__indicator"></span>
+                            </label>
+                        </li>
+                        <li class="breadcrumbs__item">
+                            <label class="breadcrumbs__label" for="label2">
+                                <input aria-label="хлебные крошки" type="radio" id="label2" name="bread" class="breadcrumbs__btn visually-hidden">
+                                <span class="breadcrumbs__indicator"></span>
+                            </label>
+                        </li>
+                        <li class="breadcrumbs__item">
+                            <label class="breadcrumbs__label" for="label3">
+                                <input aria-label="хлебные крошки" type="radio" id="label3" name="bread" class="breadcrumbs__btn visually-hidden">
+                                <span class="breadcrumbs__indicator"></span>
+                            </label>
+                        </li>
+                        <li class="breadcrumbs__item">
+                            <label class="breadcrumbs__label" for="label4">
+                                <input aria-label="хлебные крошки" type="radio" id="label4" name="bread" class="breadcrumbs__btn visually-hidden">
+                                <span class="breadcrumbs__indicator"></span>
+                            </label>
+                        </li>
+                        <li class="breadcrumbs__item">
+                            <label class="breadcrumbs__label" for="label5">
+                                <input aria-label="хлебные крошки" type="radio" id="label5" name="bread" class="breadcrumbs__btn visually-hidden">
+                                <span class="breadcrumbs__indicator"></span>
+                            </label>
+                        </li>
+                        <li class="breadcrumbs__item">
+                            <label class="breadcrumbs__label" for="label6">
+                                <input aria-label="хлебные крошки" type="radio" id="label6" name="bread" class="breadcrumbs__btn visually-hidden">
+                                <span class="breadcrumbs__indicator"></span>
+                            </label>
+                        </li>
+                        <li class="breadcrumbs__item">
+                            <label class="breadcrumbs__label" for="label7">
+                                <input aria-label="хлебные крошки" type="radio" id="label7" name="bread" class="breadcrumbs__btn visually-hidden">
+                                <span class="breadcrumbs__indicator"></span>
+                            </label>
+                        </li>
+                        <li class="breadcrumbs__item">
+                            <label class="breadcrumbs__label" for="label8">
+                                <input aria-label="хлебные крошки" type="radio" id="label8" name="bread" class="breadcrumbs__btn visually-hidden">
+                                <span class="breadcrumbs__indicator"></span>
+                            </label>
+                        </li>
+                        <li class="breadcrumbs__item">
+                            <label class="breadcrumbs__label" for="label9">
+                                <input aria-label="хлебные крошки" type="radio" id="label9" name="bread" class="breadcrumbs__btn visually-hidden">
+                                <span class="breadcrumbs__indicator"></span>
+                            </label>
+                        </li>
+                    </ul>
+                </form>
 
-</div>
-<div class="we-do__content">
-    <p class="we-do__burger">
-        <img src="img/burgerfirst.png" alt="burger" height="325" width="370" class="we-do__img">
-    </p>
-    <p class="we-do__text">
-        <span class="we-do__text--first">МЫ ДЕЛАЕМ</span>
-        <span class="we-do__text--second">натуральные бургеры</span>
-    </p>
-</div>
-<div class="we-do__next-step">
-    <a href="#" class="we-do__next-step--link"></a>
-</div>
-</div>
+            </div>
+            <div class="we-do__content">
+                <p class="we-do__burger">
+                    <img src="img/burgerfirst.png" alt="burger" height="325" width="370" class="we-do__img">
+                </p>
+                <p class="we-do__text">
+                    <span class="we-do__text--first">МЫ ДЕЛАЕМ</span>
+                    <span class="we-do__text--second">натуральные бургеры</span>
+                </p>
+            </div>
+            <div class="we-do__next-step">
+                <a href="#" class="we-do__next-step--link"></a>
+            </div>
+        </div>
     </section>
-
+<section class="we-best">
+ <div class="container">
+     <h1 class="we-best__title">
+         МЫ ЛУЧШИЕ
+     </h1>
+  <ul class="advantages">
+      <li class="advantages__item">
+        <p class="advantages__img advantages__img--meat"></p>
+        <h2 class="advantages__title">100% свежее мясо</h2>
+        <p class="advantages__text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</p>
+      </li>
+      <li class="advantages__item">
+        <p class="advantages__img advantages__img--hand"></p>
+        <h2 class="advantages__title">Ручная  сборка</h2>
+        <p class="advantages__text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.</p>
+      </li>
+      <li class="advantages__item">
+        <p class="advantages__img advantages__img--sheet"></p>
+        <h2 class="advantages__title">Натуральные ингредиенты</h2>
+        <p class="advantages__text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.</p>
+      </li>
+  </ul>
+ </div>
+</section>
 
 
 
