--- a/index.html
+++ b/index.html
@@ -124,31 +124,126 @@
             </div>
         </div>
     </section>
-<section class="we-best">
- <div class="container">
-     <h1 class="we-best__title">
-         МЫ ЛУЧШИЕ
-     </h1>
-  <ul class="advantages">
-      <li class="advantages__item">
-        <p class="advantages__img advantages__img--meat"></p>
-        <h2 class="advantages__title">100% свежее мясо</h2>
-        <p class="advantages__text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</p>
-      </li>
-      <li class="advantages__item">
-        <p class="advantages__img advantages__img--hand"></p>
-        <h2 class="advantages__title">Ручная  сборка</h2>
-        <p class="advantages__text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.</p>
-      </li>
-      <li class="advantages__item">
-        <p class="advantages__img advantages__img--sheet"></p>
-        <h2 class="advantages__title">Натуральные ингредиенты</h2>
-        <p class="advantages__text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.</p>
-      </li>
-  </ul>
- </div>
-</section>
+    <section class="we-best">
+        <div class="container">
+            <h1 class="we-best__title">
+                МЫ ЛУЧШИЕ
+            </h1>
+            <ul class="advantages">
+                <li class="advantages__item">
+                    <p class="advantages__img advantages__img--meat"></p>
+                    <h2 class="advantages__title">100% свежее мясо</h2>
+                    <p class="advantages__text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</p>
+                </li>
+                <li class="advantages__item">
+                    <p class="advantages__img advantages__img--hand"></p>
+                    <h2 class="advantages__title">Ручная сборка</h2>
+                    <p class="advantages__text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает
+                        сюжетный реформаторский пафос.</p>
+                </li>
+                <li class="advantages__item">
+                    <p class="advantages__img advantages__img--sheet"></p>
+                    <h2 class="advantages__title">Натуральные ингредиенты</h2>
+                    <p class="advantages__text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.</p>
+                </li>
+            </ul>
+        </div>
+    </section>
 
+    <section class="reviews">
+
+        <ul class="reviews__list">
+            <li class="reviews__item reviews__item--photo1">
+                <img src="img/foto1.jpg" alt="фото клиента" class="reviews__img">
+                <div class="reviews__hover">
+                    <h2 class="reviews__hover--title">Константин Спилберг</h2>
+                    <p class="reviews__hover--text">
+                        Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
+                        мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                    </p>
+                    <button class="reviews__hover--btn">Подробнее</button>
+                </div>
+            </li>
+            <li class="reviews__item reviews__item--photo2">
+                <img src="img/photo2.jpg" alt="фото клиента" class="reviews__img">
+                <div class="reviews__hover">
+                    <h2 class="reviews__hover--title">Константин Спилберг</h2>
+                    <p class="reviews__hover--text">
+                        Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
+                        мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                    </p>
+                    <button class="reviews__hover--btn">Подробнее</button>
+                </div>
+            </li>
+            <li class="reviews__item reviews__item--photo3">
+                <img src="img/photo3.jpg" alt="фото клиента" class="reviews__img">
+                <div class="reviews__hover">
+                    <h2 class="reviews__hover--title">Константин Спилберг</h2>
+                    <p class="reviews__hover--text">
+                        Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
+                        мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                    </p>
+                    <button class="reviews__hover--btn">Подробнее</button>
+                </div>
+            </li>
+            <li class="reviews__item reviews__item--photo4">
+                <img src="img/photo4.jpg" alt="фото клиента" class="reviews__img">
+                <div class="reviews__hover">
+                    <h2 class="reviews__hover--title">Константин Спилберг</h2>
+                    <p class="reviews__hover--text">
+                        Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
+                        мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                    </p>
+                    <button class="reviews__hover--btn">Подробнее</button>
+                </div>
+            </li>
+            <li class="reviews__item reviews__item--photo5">
+                <img src="img/photo5.jpg" alt="фото клиента" class="reviews__img">
+                <div class="reviews__hover">
+                    <h2 class="reviews__hover--title">Константин Спилберг</h2>
+                    <p class="reviews__hover--text">
+                        Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
+                        мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                    </p>
+                    <button class="reviews__hover--btn">Подробнее</button>
+                </div>
+            </li>
+            <li class="reviews__item reviews__item--photo6">
+                <img src="img/photo6.jpg" alt="фото клиента" class="reviews__img">
+                <div class="reviews__hover">
+                    <h2 class="reviews__hover--title">Константин Спилберг</h2>
+                    <p class="reviews__hover--text">
+                        Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
+                        мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                    </p>
+                    <button class="reviews__hover--btn">Подробнее</button>
+                </div>
+            </li>
+            <li class="reviews__item reviews__item--photo7">
+                <img src="img/photo7.jpg" alt="фото клиента" class="reviews__img">
+                <div class="reviews__hover">
+                    <h2 class="reviews__hover--title">Константин Спилберг</h2>
+                    <p class="reviews__hover--text">
+                        Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
+                        мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                    </p>
+                    <button class="reviews__hover--btn">Подробнее</button>
+                </div>
+            </li>
+            <li class="reviews__item reviews__item--photo8">
+                <img src="img/photo8.jpg" alt="фото клиента" class="reviews__img">
+                <div class="reviews__hover">
+                    <h2 class="reviews__hover--title">Константин Спилберг</h2>
+                    <p class="reviews__hover--text">
+                        Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
+                        мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                    </p>
+                    <button class="reviews__hover--btn">Подробнее</button>
+                </div>
+            </li>
+        </ul>
+
+    </section>
 
 
 </body>
