--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
             <div class="we-do__content">
                 <p class="we-do__burger">
-                    <img src="img/burgerfirst.png" alt="burger" height="325" width="370" class="we-do__img">
+                    <img src="img/burgerfirst.png" alt="burger"  class="we-do__img">
                 </p>
                 <p class="we-do__text">
                     <span class="we-do__text--first">МЫ ДЕЛАЕМ</span>
@@ -151,7 +151,7 @@
     </section>
 
     <section class="reviews">
-
+       <h1 class="visually-hidden">Отзывы клиентов</h1>
         <ul class="reviews__list">
             <li class="reviews__item reviews__item--photo1">
                 <img src="img/foto1.jpg" alt="фото клиента" class="reviews__img">
