--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </ul>
                 </nav>
                 <div class="header__nav--btn-wrap">
-                    <button class="header__nav--btn">
+                    <button type="button" class="header__nav--btn">
                         Заказать
                     </button>
                 </div>
@@ -114,10 +114,10 @@
                 <p class="we-do__burger">
                     <img src="img/burgerfirst.png" alt="burger"  class="we-do__img">
                 </p>
-                <p class="we-do__text">
-                    <span class="we-do__text--first">МЫ ДЕЛАЕМ</span>
+                <div class="we-do__text">
+                    <h1 class="we-do__text--first">МЫ ДЕЛАЕМ</h1>
                     <span class="we-do__text--second">натуральные бургеры</span>
-                </p>
+                </div>
             </div>
             <div class="we-do__next-step">
                 <a href="#" class="we-do__next-step--link"></a>
