--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <li class="advantages__item">
                         <div class="advantages__img advantages__img--meat">
                             <!--<img src="img/icons/meat.svg" alt="мясо">-->
-                            <svg>
+                            <svg class="advantages__svg-sprite" width="100" height="100">
                                 <use xlink:href="img/sprite.svg#beef"></use>
                             </svg>
                         </div>
