--- a/index.html
+++ b/index.html
@@ -408,16 +408,32 @@
 <div class="footer__right">
 <ul class="footer__socials--list">
     <li class="footer__socials--item">
-        <a href="#" class="footer__socials--link">vk</a>
+        <a href="#" class="footer__socials--link">
+            <svg class="advantages__svg-sprite" width="24" height="14">
+            <use xlink:href="img/sprite.svg#vk"></use>
+        </svg>
+    </a>
     </li>
     <li class="footer__socials--item">
-        <a href="#" class="footer__socials--link">f</a>
+        <a href="#" class="footer__socials--link">
+                <svg class="advantages__svg-sprite" width="21" height="21">
+                        <use xlink:href="img/sprite.svg#facebook"></use>
+                    </svg>
+        </a>
     </li>
     <li class="footer__socials--item">
-        <a href="#" class="footer__socials--link">in</a>
+        <a href="#" class="footer__socials--link">
+                <svg class="advantages__svg-sprite" width="21" height="21">
+                        <use xlink:href="img/sprite.svg#insta"></use>
+                    </svg>
+        </a>
     </li>
     <li class="footer__socials--item">
-        <a href="#" class="footer__socials--link">tw</a>
+        <a href="#" class="footer__socials--link">
+                <svg class="advantages__svg-sprite" width="21" height="17">
+                        <use xlink:href="img/sprite.svg#tw"></use>
+                    </svg>
+        </a>
     </li>
 </ul>
 </div>
