--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <h1 class="reviews__title">Отзывы клиентов</h1>
             <ul class="reviews__list">
                 <li class="reviews__item reviews__item--photo1">
-                    <img src="img/foto1.jpg" alt="фото клиента" class="reviews__img">
+                    <img src="img/foto1.jpg" alt="фото клиента1" class="reviews__img">
                     <div class="reviews__hover">
                         <h2 class="reviews__hover--title">Константин Спилберг</h2>
                         <p class="reviews__hover--text">
@@ -196,7 +196,7 @@
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo2">
-                    <img src="img/photo2.jpg" alt="фото клиента" class="reviews__img">
+                    <img src="img/photo2.jpg" alt="фото клиента2" class="reviews__img">
                     <div class="reviews__hover">
                         <h2 class="reviews__hover--title">Константин Спилберг</h2>
                         <p class="reviews__hover--text">
@@ -207,7 +207,7 @@
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo3">
-                    <img src="img/photo3.jpg" alt="фото клиента" class="reviews__img">
+                    <img src="img/photo3.jpg" alt="фото клиента3" class="reviews__img">
                     <div class="reviews__hover">
                         <h2 class="reviews__hover--title">Константин Спилберг</h2>
                         <p class="reviews__hover--text">
@@ -218,7 +218,7 @@
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo4">
-                    <img src="img/photo4.jpg" alt="фото клиента" class="reviews__img">
+                    <img src="img/photo4.jpg" alt="фото клиента4" class="reviews__img">
                     <div class="reviews__hover">
                         <h2 class="reviews__hover--title">Константин Спилберг</h2>
                         <p class="reviews__hover--text">
@@ -229,7 +229,7 @@
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo5">
-                    <img src="img/photo5.jpg" alt="фото клиента" class="reviews__img">
+                    <img src="img/photo5.jpg" alt="фото клиента5" class="reviews__img">
                     <div class="reviews__hover">
                         <h2 class="reviews__hover--title">Константин Спилберг</h2>
                         <p class="reviews__hover--text">
@@ -240,7 +240,7 @@
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo6">
-                    <img src="img/photo6.jpg" alt="фото клиента" class="reviews__img">
+                    <img src="img/photo6.jpg" alt="фото клиента6" class="reviews__img">
                     <div class="reviews__hover">
                         <h2 class="reviews__hover--title">Константин Спилберг</h2>
                         <p class="reviews__hover--text">
@@ -251,7 +251,7 @@
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo7">
-                    <img src="img/photo7.jpg" alt="фото клиента" class="reviews__img">
+                    <img src="img/photo7.jpg" alt="фото клиента7" class="reviews__img">
                     <div class="reviews__hover">
                         <h2 class="reviews__hover--title">Константин Спилберг</h2>
                         <p class="reviews__hover--text">
@@ -262,7 +262,7 @@
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo8">
-                    <img src="img/photo8.jpg" alt="фото клиента" class="reviews__img">
+                    <img src="img/photo8.jpg" alt="фото клиента8" class="reviews__img">
                     <div class="reviews__hover">
                         <h2 class="reviews__hover--title">Константин Спилберг</h2>
                         <p class="reviews__hover--text">
@@ -291,7 +291,7 @@
                                 <div class="form__block-title">
                                     Телефон
                                 </div>
-                                <input type="text" class="form__input">
+                                <input type="text" class="form__input" placeholder="89212264923">
                             </label>
                         </div>
                         <div class="form__row">
@@ -402,35 +402,41 @@
 <div class="footer__left">
 <p class="footer__contacts">
     <span class="footer__address">Санкт-Петербург, ул.Бабушкина, д.12/1, 15</span>
-    <span class="footer__phone">+7 (812) 377-13-77</span>
+    <div class="footer__phone-wrap">
+            <svg class="advantages__svg-sprite--phone" width="14" height="14">
+                    <use xlink:href="img/sprite.svg#phone"></use>
+                </svg>
+            <span class="footer__phone">+7 (812) 377-13-77</span>
+    </div>
+    
 </p>
 </div>
 <div class="footer__right">
 <ul class="footer__socials--list">
     <li class="footer__socials--item">
         <a href="#" class="footer__socials--link">
-            <svg class="advantages__svg-sprite" width="100" height="100">
+            <svg class="advantages__svg-sprite--socials" width="24" height="14">
             <use xlink:href="img/sprite.svg#vk"></use>
         </svg>
     </a>
     </li>
     <li class="footer__socials--item">
         <a href="#" class="footer__socials--link">
-                <svg class="advantages__svg-sprite" width="100" height="100">
+                <svg class="advantages__svg-sprite--socials" width="21" height="21">
                         <use xlink:href="img/sprite.svg#facebook"></use>
                     </svg>
         </a>
     </li>
     <li class="footer__socials--item">
         <a href="#" class="footer__socials--link">
-                <svg class="advantages__svg-sprite" width="100" height="100">
+                <svg class="advantages__svg-sprite--socials" width="21" height="21">
                         <use xlink:href="img/sprite.svg#insta"></use>
                     </svg>
         </a>
     </li>
     <li class="footer__socials--item">
         <a href="#" class="footer__socials--link">
-                <svg class="advantages__svg-sprite" width="100" height="100">
+                <svg class="advantages__svg-sprite--socials" width="21" height="18">
                         <use xlink:href="img/sprite.svg#tw"></use>
                     </svg>
         </a>
