--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <div class="container">
                 <header class="header">
                     <p class="header__logo">
-                        <!--<img src="img/icons/logo.svg" alt="logo" height="72" width="90">-->
-                        <svg class="advantages__svg-sprite" width="98" height="80">
+                        <img src="img/icons/logo.svg" alt="logo" height="72" width="90">
+                        <!--<svg class="advantages__svg-sprite" width="98" height="80">
                             <use xlink:href="img/sprite.svg#logo"></use>
-                        </svg>
+                        </svg>-->
                     </p>
                     <nav class="header__nav">
                         <ul class="header__nav--list">
@@ -48,7 +48,7 @@
                         </ul>
                     </nav>
                     <div class="header__nav--btn-wrap">
-                        <a href="#" class="header__nav--btn">
+                        <a href="#order" class="header__nav--btn">
                             Заказать
                         </a>
                     </div>
@@ -56,9 +56,10 @@
                 </header>
 
                 <div class="we-do__content">
-                    <p class="we-do__burger">
-                        <img src="img/burgerfirst.png" alt="burger" class="we-do__img">
-                    </p>
+                    <div class="we-do__burger">
+                        <!--<img src="img/burgerfirst.png" alt="burger" class="we-do__img">-->
+                        <div class="we-do__img"></div>
+                    </div>
                     <div class="we-do__text">
                         <h1 class="we-do__text--title">
                             <span class="we-do__text--first">МЫ ДЕЛАЕМ</span>
@@ -127,11 +128,11 @@
                     <h1 class="team__title">Команда</h1>
                     <ul class="team__list">
                         <li class="team__item">
-                            <button class="team__member team__member--yellow">Дэниэл Редклиф</button>
+                            <button type="button" class="team__member team__member--yellow">Дэниэл Редклиф</button>
 
                         </li>
                         <li class="team__item">
-                            <button class="team__member team__member--yellow">Ричард Джеймс</button>
+                            <button type="button" class="team__member team__member--yellow">Ричард Джеймс</button>
                             <div class="team__block team__block--open team__block--close">
                                 <div class="team__block--image-wrap">
                                     <img src="img/teamBlockimg.jpg" alt="Дэниэл Редклиф" class="team__block--image"> </div>
@@ -142,11 +143,11 @@
                             </div>
                         </li>
                         <li class="team__item">
-                            <button class="team__member team__member--yellow">Джейк Финн</button>
+                            <button type="button" class="team__member team__member--yellow">Джейк Финн</button>
 
                         </li>
                         <li class="team__item ">
-                            <button class="team__member team__member--yellow">Николай Иванов</button>
+                            <button type="button" class="team__member team__member--yellow">Николай Иванов</button>
 
                         </li>
                     </ul>
@@ -159,7 +160,7 @@
             <h1 class="menu__title">Меню</h1>
             <ul class="menu__list">
                 <li class="menu__item menu__item--active">
-                    <button class="menu__btn menu__btn--bg1">
+                    <button type="button" class="menu__btn menu__btn--bg1">
                         <h2 class="menu__item--title menu__item--title--meat menu__item--yellow">Для мясоедов</h2>
 
                     </button>
@@ -173,7 +174,7 @@
                     </div>
                 </li>
                 <li class="menu__item menu__item--active">
-                    <button class="menu__btn menu__btn--bg2">
+                    <button type="button" class="menu__btn menu__btn--bg2">
                         <h2 class="menu__item--title menu__item--title--vegan menu__item--yellow">Вегатарианское</h2>
 
                     </button>
@@ -183,7 +184,7 @@
                     </div>-->
                 </li>
                 <li class="menu__item menu__item--active">
-                    <button class="menu__btn menu__btn--bg3">
+                    <button type="button" class="menu__btn menu__btn--bg3">
                         <h2 class="menu__item--title menu__item--title--diet menu__item--yellow">Диетическое</h2>
 
                     </button>
@@ -207,7 +208,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn">Подробнее</button>
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo2">
@@ -218,7 +219,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn">Подробнее</button>
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo3">
@@ -229,7 +230,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn">Подробнее</button>
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo4">
@@ -240,7 +241,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn">Подробнее</button>
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo5">
@@ -251,7 +252,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn">Подробнее</button>
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo6">
@@ -262,7 +263,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn">Подробнее</button>
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo7">
@@ -273,7 +274,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn">Подробнее</button>
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo8">
@@ -284,7 +285,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn">Подробнее</button>
                     </div>
                 </li>
             </ul>
@@ -405,7 +406,7 @@
                         </div>
 
                         <div class="form__row">
-                            <button type="button" class="form__submit">
+                            <button type="submit" class="form__submit">
                                 Заказать
                             </button>
                             <button type="reset" class="form__reset">
@@ -430,7 +431,7 @@
                                         <svg class="advantages__svg-sprite--phone" width="14" height="14">
                                             <use xlink:href="img/sprite.svg#phone"></use>
                                         </svg>
-                                        <span class="footer__phone">+7 (812) 377-13-77</span>
+                                        <a href="tel:+78123771377" class="footer__phone">  +7 (812) 377-13-77</a>
                                     </div>
             
                                 </p>
