--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <button type="button" class="team__member team__member--yellow">Дэниэл Редклиф</button>
 
                         </li>
-                        <li class="team__item">
+                        <li class="team__item ">
                             <button type="button" class="team__member team__member--yellow">Ричард Джеймс</button>
                             <div class="team__block team__block--open team__block--close">
                                 <div class="team__block--image-wrap">
@@ -217,7 +217,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button type="button" class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn"> <span class="btn-text1"> Подробнее</span><span class="btn-text2"> Читать отзыв</span></button>
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo2">
@@ -228,7 +228,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button type="button" class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn"><span class="btn-text1"> Подробнее</span><span class="btn-text2"> Читать отзыв</span></button>
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo3">
@@ -239,7 +239,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button type="button" class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn"><span class="btn-text1"> Подробнее</span><span class="btn-text2"> Читать отзыв</span></button>
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo4">
@@ -250,7 +250,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button type="button" class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn"><span class="btn-text1"> Подробнее</span><span class="btn-text2"> Читать отзыв</span></button>
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo5">
@@ -261,7 +261,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button type="button" class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn"><span class="btn-text1"> Подробнее</span><span class="btn-text2"> Читать отзыв</span></button>
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo6">
@@ -272,7 +272,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button type="button" class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn"><span class="btn-text1"> Подробнее</span><span class="btn-text2"> Читать отзыв</span></button>
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo7">
@@ -283,7 +283,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button type="button" class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn"><span class="btn-text1"> Подробнее</span><span class="btn-text2"> Читать отзыв</span></button>
                     </div>
                 </li>
                 <li class="reviews__item reviews__item--photo8">
@@ -294,7 +294,7 @@
                             Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
                             мягкими, котлетка такой сочной, а сыр таким расплавленным.
                         </p>
-                        <button type="button" class="reviews__hover--btn">Подробнее</button>
+                        <button type="button" class="reviews__hover--btn"><span class="btn-text1"> Подробнее</span><span class="btn-text2"> Читать отзыв</span></button>
                     </div>
                 </li>
             </ul>
