--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <li class="header__nav--item">
                                 <a href="#" class="header__nav--link">Отзывы</a>
                             </li>
-                            <li class="header__nav--item">
+                            <li class="header__nav--item header__nav--item--hidden">
                                 <a href="#" class="header__nav--link">КАК МЫ РАБОТАЕМ</a>
                             </li>
                             <li class="header__nav--item">
@@ -512,6 +512,36 @@
                 </li>
             </ul>
         </div>
+<div class="nav-popup"> 
+    <button type="button" class="nav-popup__btn"></button>
+    <nav class="nav-popup__nav">
+        <ul class="nav-popup--list">
+            <li class="nav-popup--item">
+                <a href="#" class="nav-popup--link">О нас</a>
+            </li>
+            <li class="nav-popup--item">
+                <a href="#" class="nav-popup--link">Бургеры</a>
+            </li>
+            <li class="nav-popup--item">
+                <a href="#" class="nav-popup--link">Команда</a>
+            </li>
+            <li class="nav-popup--item">
+                <a href="#" class="nav-popup--link">Меню</a>
+            </li>
+            <li class="nav-popup--item">
+                <a href="#" class="nav-popup--link">Отзывы</a>
+            </li>
+            
+            <li class="nav-popup--item">
+                <a href="#" class="nav-popup--link">Контакты</a>
+            </li>
+        </ul>
+    </nav>
+</div>
+        
+
+
+
 
     </div>
 </body>
