--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <li class="header__nav--item">
                                 <a href="#" class="header__nav--link">Отзывы</a>
                             </li>
-                            <li class="header__nav--item header__nav--item--hidden">
+                            <li class="header__nav--item ">
                                 <a href="#" class="header__nav--link">КАК МЫ РАБОТАЕМ</a>
                             </li>
                             <li class="header__nav--item">
@@ -51,6 +51,7 @@
                         <a href="#order" class="header__nav--btn">
                             Заказать
                         </a>
+                        <a href="#nav-popup" class="header__nav--hamburger"></a>
                     </div>
 
                 </header>
@@ -512,7 +513,7 @@
                 </li>
             </ul>
         </div>
-<div class="nav-popup"> 
+<div class="nav-popup" id="nav-popup"> 
     <button type="button" class="nav-popup__btn"></button>
     <nav class="nav-popup__nav">
         <ul class="nav-popup--list">
