--- a/index.html
+++ b/index.html
@@ -124,12 +124,52 @@
             </div>
         </section>
 
-        <section class="slider" id="slider">
-            <div class="container">
+<section class="slider" id="slider">
+    <div class="container">
+        <div class="slider__content">
 
+            <div class="slider__content--left">
+                <div class="slider__content--consist">
+                    <svg class="slider__gamb--svg">
+                            <use xlink:href="img/sprite.svg#consist"></use>
+                    </svg>
+                    <span class="slider__gamb--text">Состав</span>
+                </div>
+                <img src="img/burgerblack.png"  alt="гамбургер" class="slider__gamb--img">
+                <div class="slider__content--kkal">
+                    <svg class="slider__kkal--svg">
+                            <use xlink:href="img/sprite.svg#kkal"></use>
+                    </svg>
+                    <span class="slider__kkal--1200">1200</span>
+                    <span class="slider__kkal--kkal">ккал</span>
+                </div>
             </div>
+            <div class="slider__content--right">
+                <h1 class="slider__content-title">DARK BEEF BURGER</h1>
+                <p class="slider__content--text">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, 
+                    тремя кусочками нежнейшего сыра эмменталь,
+                     двумя помидорами, луком, салатом и соусом
+                      гриль теперь с добавлением экзотического
+                       соуса чураско.</p>
+                <div class="slider__content--order">
+                    <span class="slider__content--price">500</span>
+                    <span class="slider__content--rub">рублей</span>
+                    <button type="button" class="slider__content--btn">заказать</button>
+                </div>
+            </div>
+<div class="slider__popup slider__popup--open slider__popup--close">
 
-        </section>
+</div>
+        </div>
+<div class="slider__linkblock--left">
+    <a href="" class="slider__link--left"></a>
+</div>
+<div class="slider__linkblock--right">
+        <a href="" class="slider__link--right"></a>
+    </div>
+    </div>
+
+</section>
 
         <section class="team" id="team">
 
